# colour_designer

./: .gitignore  CHANGES_v1.1.md  CHANGES_v1.2.md  CMakeLists.txt  GITHUB_STATIC_BUILD.md  README.md  WINDOWS_LOCAL_BUILD.md  resources.qrc
.github/workflows/: build-windows-portable.yml  build-windows-static.yml  main.yml
assets/: app.qss
presets/: default_palettes.json
scripts/: build-fedora.sh  build-windows-mingw.ps1
shaders/: recolor.frag  recolor.vert
src/: ColorPickerWidget.cpp  ColorPickerWidget.h  ControlPanel.cpp  ControlPanel.h  ExportComposer.cpp  ExportComposer.h  ImageRecolorer.cpp  ImageRecolorer.h  MainWindow.cpp  MainWindow.h  PaletteSerializer.cpp  PaletteSerializer.h  PreviewGLWidget.cpp  PreviewGLWidget.h  RecolorState.cpp  RecolorState.h  main.cpp
tools/: generate_masks.py
